# chessboard-tracker

./: CMakeLists.txt  manifest.xml  package.xml
include/fast_checkerboard_detector/: fast_checkerboard_detector.h
launch/: fast_checkerboard_detector.launch
src/: fast_checkerboard_detector.cpp
