<?xml version="1.0"?>
<package>
  <name>chessboard-tracker</name>
  <version>0.0.0</version>
  <description>The chessboard-tracker package</description>

  <maintainer email="hausmankarol@gmail.com">Karol Hausman</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/chessboard-detector</url>
  <author>Vaibhav Mehta</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>	

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <export>
	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
